--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".common.loginSignup.PasswordUpdatedActivity"></activity>
+        <activity android:name=".common.loginSignup.PasswordUpdatedActivity"/>
         <activity android:name=".common.loginSignup.SetNewPasswordActivity" />
         <activity android:name=".common.loginSignup.ForgotPasswordActivity" />
         <activity android:name=".common.loginSignup.OTPVerificationActivity" />
