--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
+    ext.kotlin_version = '1.5.10'
     repositories {
         google()
-        jcenter()
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
@@ -15,10 +17,13 @@ buildscript {
     }
 }
 
+ext {
+    navigationVersion = $/2.3.0/$
+}
+
 allprojects {
     repositories {
         google()
-        jcenter()
     }
 }
 
